<resources>
    <string name="logout">Logout</string>
    <string name="logout_description">Are you sure you want to log out? You will no longer be connected to PFN services</string>
    <string name="error_list">Error getting list</string>
    <string name="app_name">VPNATOM</string>
    <string name="military_grade">Military Grade Encryption for Total Protection</string>
    <string name="military_discription">Achieve total Internet Freedom, security and privacy with
        reinforced encryption that ensures your anonymity</string>
    <string name="ozone_protection">Ozone Protection</string>
    <string name="ozone_description">24/7 Protection delivered by impenetrable security</string>
    <string name="dont_have_account">Don’t have a PFN account?</string>
    <string name="click_here_to_learn_more">Click Here to Learn More</string>
    <string name="security_app_pays">The Security solution that pays for itself</string>
    <string name="the_private_family_network">The Private Family Network</string>
    <string name="world_class_premium_online_security_solutions">World Class Premium Online Security Solutions</string>
    <string name="incridible_opertunity">Incredible Opportunity</string>
    <string name="gold_standard">The Gold Standard in Relationship Marketing</string>
    <string name="private_family_network">Access the Private Family Network Today
and Enjoy all the Extra Benefits.</string>
    <string name="app_intro_skip">Skip</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="done">Done</string>
    <string name="app_bar_configure">Configure</string>
    <string name="app_bar_pfn">PFN</string>
    <string name="gravity_discription">Where would we be without Gravity? All the threats out there can infiltrate your system and expose you to risk.</string>
    <string name="back">Back</string>
    <string name="enabled_gravity_discription">Gravity is protecting you to ensure your piece of mind. You are protected around the clock from viruses, nasty websites and malware.</string>
    <string name="login">Login</string>
    <string name="hd_stream">HD STREAM</string>
    <string name="hd_stream_description">Enjoy unlimited Bandwidth and HD streaming from anywhere</string>
    <string name="internet_freedom_description">Freely surf the internet without Geo Restrictions – Access Global content</string>
    <string name="security_privacy_description">Secure your online privacy and anonymity</string>
    <string name="internet_freedom">INTERNET FREEDOM</string>
    <string name="security_privacy">SECURITY / PRIVACY</string>
    <string name="file_sharing">FILE SHARING</string>
    <string name="file_sharing_description">Share Files instantly, privately and legally on file sharing platforms</string>
    <string name="dedicated_ip">DEDICATED IP</string>
    <string name="dedicated_ip_descriptipon">Comming Soon</string>
    <string name="mode_selection">Select the mode that best serves your purpose.
By using the most appropriate mode, we are able to optimise your network performance.</string>
    <string name="app_bar_forgot_password_text">Forgot Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="done_desc">Enter username &amp; password and Click “Done"</string>
    <string name="app_bar_gravity">Gravity</string>
    <string name="forgot_password_instructions">Enter your username and tap ‘Done’. We will send you an email with instructions on how to reset your password.</string>
    <string name="title_activity_main_app">MainAppActivity</string>
    <string name="select_mode_that_serves_you_best">Optimize your Network performance by selecting the Mode that best suits your specific purpose</string>
    <string name="select_mode">Select Mode</string>
    <string name="label_title"><font fgcolor="#ffff0000">The Private Family Network</font></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_location_countries"><font fgcolor="#ffff0000">Location</font></string>
    <string name="title_activity_purpose">PurposeActivity</string>
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="title_activity_internet_freedom">InternetFreedomActivity</string>
    <string name="title_activity_security">SecurityActivity</string>
    <string name="title_activity_location_security">LocationSecurityActivity</string>
    <string name="title_activity_file_sharing">FileSharingActivity</string>
    <string name="title_activity_file_share_quick_connect">FileShareQuickConnectActivity</string>
    <string name="title_activity_file_share_mode_selection">FileShareModeSelectionActivity</string>
    <string name="title_activity_internet_freedom_locations">InternetFreedomLocationsActivity
    </string>
    <string name="atom_secret_key">b12e0405d803ba771c46bb94be29a0a59f976b06</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the use of Atom SDK for
            Privacy and Security.


        ]]>
    </string>
    <string name="label_uuid">UUID</string>
    <string name="label_connect_via">Connect with</string>
    <string name="label_connect_with_psk">Connect with Pre-Shared Key</string>
    <string name="label_connect_with_params">Connect with Params</string>
    <string name="label_connect_with_dedicated_ip">Connect with Dedicated IP</string>
    <string name="lbl_optimize_connection">Optimize Connection</string>
    <string name="lbl_connect">Connect</string>
    <string name="lbl_select_protocol">Select Protocol</string>
    <string name="lbl_dedicated_ip">Dedicated IP</string>
    <string name="lbl_skip_user_verification">Skip User Verification</string>
    <string name="lbl_pre_shared_key">Pre-Shared Key</string>
    <string name="empty_secret_key">Secret Key is required</string>
    <string name="lbl_primary_protocol">Primary Protocol</string>
    <string name="lbl_secondary_protocol">Secondary Protocol</string>
    <string name="lbl_tertiary_protocol">Tertiary Protocol</string>
    <string name="lbl_select_country">Select Country</string>
    <string name="doiget">Do I Get My Own Unique Private Family \nNetwork Website URL?</string>
    <string name="doyouprovide">Do You Provide any Marketing Materials or Tools?</string>
    <string name="caniview">Can I View My Reward Commissions and User Referrals?</string>
    <string name="howdoigetpaid">How Do I Get Paid My Commissions Rewards \nand Bonuses?</string>
    <string name="caniusemyunique">Can I Use My Unique Private Family Network website for Offline Promotion?</string>
    <string name="toolbar_name">P2P Protection</string>
    <string name="toolbar_back_button">PFN</string>
    <string name="p2p_protection">P2P Protection</string>
    <string name="p2p_protection_description">Stop viruses, malware, etc, while\ndownloading or sharing files online</string>
    <string name="content_filtering_heading">Content Filtering</string>
    <string name="content_description">Filter unwanted web content</string>
    <string name="ozone_antivirus">Antivirus</string>
    <string name="ozone_toolbar_back_button">PFN</string>
    <string name="ozone_toolbar_heading">Ozone</string>
    <string name="ozone_antivirus_description">Remain protected against incoming threats</string>
    <string name="ozone_content_filtering">Content Filtering</string>
    <string name="ozone_content_filtering_description">Filter unwanted web content</string>
    <string name="ozone_ids_ips">IDS/IPS</string>
    <string name="ozone_ids_ips_description">Detection and protection against intruders</string>
    <string name="ozone_url_filtering">URL FILTERING</string>
    <string name="ozone_url_filtering_description">Control which websites are allowed to load</string>
    <string name="ozone_app_filtering">APP FILTERING</string>
    <string name="ozone_app_filtering_description">Control which apps are allowed to run</string>
    <string name="ozone_url_filtering_config">Configure</string>
    <string name="ozone_app_filtering_config">Configure</string>
    <string name="gravity_toolbar_heading">Gravity</string>
    <string name="gravity_toolbar_back_button">PFN</string>
    <string name="gravity_toolbar_configure">Configure</string>
    <string name="gravity_disabled_text">Disabled</string>
    <string name="gravity_enabled_text">Enabled</string>
    <string name="gravity_text_large">Gravity</string>
    <string name="gravity_text_large_description">Where would we be without Gravity? All the threats out there can infiltrate your system and expose you to risk.</string>
    <string name="settings_toolbar_heading">Settings</string>
    <string name="settings_toolbar_back_button">PFN</string>
    <string name="settings_app_settings">App Settings</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_protocol">Protocol</string>
    <string name="settings_change_language">Change Language</string>
    <string name="settings_advanced_settings">Advanced Settings</string>
    <string name="settings_on_demand_vpn">Split Tunneling</string>
    <string name="settings_more">More</string>
    <string name="settings_support_center">Support Centre</string>
    <string name="settings_about">About The Private Family Network</string>
    <string name="settings_logout">LogOut</string>
    <string name="inside_profile">User Name</string>
    <string name="inside_profile_heading">Profile</string>
    <string name="inside_profile_back">Settings</string>
    <string name="inside_unable_connect">Unable to Connect?</string>
    <string name="inside_unable_connect_heading">Troubleshooting</string>
    <string name="inside_unable_connect_back">Protocol</string>
    <string name="inside_unable_connect_description">Follow this quick troubleshooting guide:</string>
    <string name="protocol_bullet_one">1. Choose a Manual Protocol</string>
    <string name="protocol_bullet_two">2. Go back to App home screen</string>
    <string name="protocol_bullet_three">3. Select your location &amp; connect</string>
    <string name="protocol_bullet_four">4. Install server profile with your PFN credentials\nand device security code</string>
    <string name="protocol_bullet_five">5. Go to your Device Settings > PFN</string>
    <string name="protocol_bullet_six">6. Toggle the PFN Configuration switch (if unsuccessful,\ntry different locations &amp; protocol</string>
    <string name="inside_faq_one_text">Do I Get My Own Unique Private Family \nNetwork Website URL?</string>
    <string name="inside_faq_one_heading">Answer</string>
    <string name="inside_faq_one_back">FAQ</string>
    <string name="answer1">Yes, you get your very own unique private family network relationship marketing referral website,  that you can immediately use and share with all of your online promotions. Add it to your own website, outgoing emails, or even your Facebook and LinkedIn profiles.\n\nEach and every click that is generated from your unique private family network referral website, will be tracked by our private family network software marketing system.  You\'ll be able to view all of your website visitors and sales in your private family network service user back office area at any time.</string>
    <string name="hd_stream_nav_two">Settings</string>
    <string name="hd_stream_nav_three">Faq</string>
    <string name="file_sharing_nav_one">P2P Protection</string>
    <string name="share">Share and earn</string>
    <string name="logged_in">Logged In Successfully</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="username">Username</string>
</resources>