<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_p2p"
            android:icon="@drawable/p2p"
            android:visible="false"
            android:title="@string/file_sharing_nav_one" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settingsmenuicon"
            android:title="@string/hd_stream_nav_two" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/faqmenuicon"
            android:title="@string/hd_stream_nav_three" />

        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share"/>


    </group>



</menu>
