<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginformscreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/mod_appbar_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginLeft="125dp"
            android:text="@string/inside_unable_connect_heading"
            android:fontFamily="@font/cabin_bold_ttf"
            android:textSize="8pt"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/back_button"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/pfn_settings_back_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:fontFamily="@font/cabin_bold_ttf"
            android:textSize="8pt"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:text="@string/inside_unable_connect_back"
            android:id="@+id/pfn_settings_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/private_family"
            android:fontFamily="@font/cabin_bold_ttf"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="60dp"
            android:text="@string/the_private_family_network"/>
    </RelativeLayout>

    <ScrollView android:layout_height="match_parent"
        android:id="@+id/scrollView1"
        android:layout_marginTop="100dp"
        android:layout_width="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Selected Language"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:fontFamily="@font/cabin_bold_ttf"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:textSize="8pt"/>-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@color/settings_relative_layout_background"
                android:id="@+id/profile">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8pt"
                    android:textColor="@android:color/white"
                    android:text="@string/inside_unable_connect"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="13dp"
                    android:fontFamily="@font/cabin_bold_ttf"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:textColor="@android:color/white"
                    android:text="@string/inside_unable_connect_description"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/cabin_bold_ttf"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="6pt"
                        android:textColor="@android:color/white"
                        android:text="@string/protocol_bullet_one"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="110dp"
                        android:fontFamily="@font/cabin_bold_ttf"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:textColor="@android:color/white"
                    android:text="@string/protocol_bullet_two"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="135dp"
                    android:fontFamily="@font/cabin_bold_ttf"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:textColor="@android:color/white"
                    android:text="@string/protocol_bullet_three"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="160dp"
                    android:fontFamily="@font/cabin_bold_ttf"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:textColor="@android:color/white"
                    android:text="@string/protocol_bullet_four"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="185dp"
                    android:fontFamily="@font/cabin_bold_ttf"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:textColor="@android:color/white"
                    android:text="@string/protocol_bullet_five"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="225dp"
                    android:fontFamily="@font/cabin_bold_ttf"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:textColor="@android:color/white"
                    android:text="@string/protocol_bullet_six"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="250dp"
                    android:fontFamily="@font/cabin_bold_ttf"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>