<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginformscreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/mod_appbar_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_marginLeft="150dp"
            android:text="@string/inside_faq_one_heading"
            android:fontFamily="@font/cabin_bold_ttf"
            android:textSize="8pt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/back_button"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/faq_back_main_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:fontFamily="@font/cabin_bold_ttf"
            android:textSize="8pt"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:text="@string/inside_faq_one_back"
            android:id="@+id/faq_main_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/private_family"
            android:fontFamily="@font/cabin_bold_ttf"
            android:layout_marginLeft="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/the_private_family_network"/>
    </RelativeLayout>

    <ScrollView android:layout_height="match_parent"
        android:id="@+id/scrollView1"
        android:layout_marginTop="100dp"
        android:layout_width="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/settings_relative_layout_background"
                android:id="@+id/doiget">

                <!--<ImageView-->
                <!--android:layout_width="55dp"-->
                <!--android:layout_height="100dp"-->
                <!--android:background="@drawable/profileicon"-->
                <!--android:layout_marginLeft="10dp"/>-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:textColor="@android:color/white"
                    android:text="@string/inside_faq_one_text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/cabin_bold_ttf"
                    android:id="@+id/ques"/>

                <!--<ImageView-->
                    <!--android:layout_width="20dp"-->
                    <!--android:layout_height="20dp"-->
                    <!--android:layout_marginTop="15dp"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:background="@drawable/forwardicon"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:id="@+id/pfn_opportunity_image"/>-->

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="7pt"
                        android:textColor="@android:color/white"
                        android:text="@string/answer1"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/cabin_bold_ttf"
                        android:id="@+id/ans"
                        android:layout_marginRight="20dp"/>

                <RelativeLayout
                    android:id="@+id/progress_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:visibility="gone">

                    <ProgressBar
                        android:id="@+id/determinateBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:indeterminateTintMode="src_atop"
                        android:indeterminateTint="@color/green_100"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>


            </RelativeLayout>


        </LinearLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>